--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ p {
   box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
 }
 
-@media (min-width: 375px) {
+@media (max-width: 375px) {
   .div1 {
   margin: auto;
  
